sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:14: error: not found: value not
    };if (not == len-2) {
          ^